<resources>
    <string name="app_name">AndroidWearTaskManagementApp</string>
    <string name="time">Time</string>
    <string name="tasker">Tasker</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="due">Due</string>
    <string name="save">Save</string>
    <string name="task_name">Task Name</string>
    <string name="new_task">New Task</string>
    <string name="show_all">Show All</string>
    <string name="tasks">Tasks</string>
    <string name="id">ID: </string>
    <string name="due_">Due:</string>
    <string name="tasker_">Tasker:</string>
    <string name="task_">Task:</string>
</resources>